prorab (1.10.0) UNRELEASED; urgency=medium

  * Added 'd' alias for 'prorab_this_dir'

 -- Ivan Gagis <igagis@gmail.com>  Mon, 29 Aug 2016 15:01:30 +0300

prorab (1.9.2) unstable; urgency=medium

  * deployment fix

 -- Ivan Gagis <igagis@gmail.com>  Sun, 21 Aug 2016 16:40:35 +0300

prorab (1.9.1) unstable; urgency=medium

  * HOMEBREW vars renamed to PRORAB vars

 -- Ivan Gagis <igagis@gmail.com>  Sun, 21 Aug 2016 16:36:57 +0300

prorab (1.9.0) unstable; urgency=medium

  * command line flags dependency added

 -- Ivan Gagis <igagis@gmail.com>  Sun, 21 Aug 2016 15:51:31 +0300

prorab (1.8.5) unstable; urgency=medium

  * prorab-build-static-lib rules added

 -- Ivan Gagis <igagis@gmail.com>  Thu, 18 Aug 2016 16:13:35 +0300

prorab (1.8.4) unstable; urgency=medium

  * use CC for linking

 -- Ivan Gagis <igagis@gmail.com>  Wed, 17 Aug 2016 15:37:32 +0300

prorab (1.8.3) unstable; urgency=medium

  * added function to find all sources within given directory

 -- Ivan Gagis <igagis@gmail.com>  Mon, 15 Aug 2016 16:33:19 +0300

prorab (1.8.2) unstable; urgency=medium

  * pkg-config rule

 -- Ivan Gagis <igagis@gmail.com>  Wed, 10 Aug 2016 13:12:09 +0300

prorab (1.8.1) unstable; urgency=medium

  * no execution permission where not needed

 -- Ivan Gagis <igagis@gmail.com>  Tue, 09 Aug 2016 23:50:11 +0300

prorab (1.8.0) unstable; urgency=medium

  * prorab-deb-prepare.sh script added
  * deb target removed from prorab.mk

 -- Ivan Gagis <igagis@gmail.com>  Tue, 09 Aug 2016 23:05:03 +0300

prorab (1.7.14) unstable; urgency=medium

  * more verbosity added

 -- Ivan Gagis <igagis@gmail.com>  Wed, 03 Aug 2016 20:24:39 +0300

prorab (1.7.13) unstable; urgency=medium

  * set pipefail when doing piped ops

 -- Ivan Gagis <igagis@gmail.com>  Wed, 03 Aug 2016 16:59:07 +0300

prorab (1.7.12) unstable; urgency=medium

  * set pipefail when doing piped ops

 -- Ivan Gagis <igagis@gmail.com>  Wed, 03 Aug 2016 16:55:20 +0300

prorab (1.7.11) unstable; urgency=medium
