@@ -1,6 +1,7 @@
 prorab (1.10.0) UNRELEASED; urgency=medium
 
   * Added 'd' alias for 'prorab_this_dir'
+  * added 'verbose' variable checking for echoing command lines
 
  -- Ivan Gagis <igagis@gmail.com>  Mon, 29 Aug 2016 15:01:30 +0300
 
